cmake_minimum_required(VERSION 3.12)
project(datastructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(datastructure main.cpp hfiles/countingSortInc.h hfiles/test.h cppfiles/test.cpp hfiles/qsort.h designPattern/singleton.h designPattern/singleton2.h designPattern/factoryinc.h niuke/heapsort.h niuke/insertsort.h niuke/identicaltree.h hfiles/treenode.h niuke/minmove.h niuke/twostackcompqueue.h niuke/rotatearray.h hfiles/demoDrivBase.h niuke/numreverse.h cppfiles/niukwjianzhioffer.cpp niuke/niukwjianzhioffer.h niuke/primer.h hfiles/queryfileprog.h cppfiles/ParamBase.cpp cppfiles/ParamBase.h cppfiles/SchoolPara.cpp cppfiles/SchoolPara.h cppfiles/Foo.cpp cppfiles/Foo.h cppfiles/FooUse.cpp cppfiles/FooUse.h)


